collapse/show at laptop screen fixed. cleaned code

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,216 +1,194 @@
 body {
-       width: 100%;
-       margin: 0%;   
-       padding-bottom: 10%; 
+	width: 100%;
+	margin: 0%;
+	padding-bottom: 10%;
 }
-
-/*.resultsSection, .floorPlans {
-    max-height: 1%;
-    max-width: 1%
-}*/
-
-
-/*.floorPlans {
-    margin: 1%;
-    padding: 1%;
-    height: 1px;
-    width: -14px
-}*/
-
-
 img {
-    max-width: 100%;
-    height: auto;
+	max-width: 100%;
+	height: auto;
 }
-
 .filtersSection {
 	bottom: 0;
 	background-color: white;
-    border-color: #47a9da;
-    border-style: solid;
-    border-width: 2px 0 0 0;
-    position: fixed;
+	border-color: #47a9da;
+	border-style: solid;
+	border-width: 2px 0 0 0;
+	position: fixed;
 	width: 100%;
 }
-.landingPageFiltersRow,.moreFiltersSelectionRow, .applyFiltersRow {
-    padding: 0% 0% 0% 15%;
+.landingPageFiltersRow, .moreFiltersSelectionRow, .applyFiltersRow {
+	padding: 0% 0% 0% 15%;
 }
 .landingPageFiltersRow {
-    padding-top: 1%;
+	padding-top: 1%;
 }
-.resetFiltersRow{
-    border-color: #d0d0d0;
-    border-style: solid;
-    border-width: 0 0 2px 0;
-    padding: .5% 0% .5% 15%;
+.resetFiltersRow {
+	border-color: #d0d0d0;
+	border-style: solid;
+	border-width: 0 0 2px 0;
+	padding: .5% 0% .5% 15%;
 }
 .filtersTitle {
-    margin-left: -1%;
-    padding-top: .5%
+	margin-left: -1%;
+	padding-top: .5%
 }
-.resetAllButton{
-    color: #47a9da;
-    margin-left: 50%;
-    padding-top: 1%
+.resetAllButton {
+	color: #47a9da;
+	margin-left: 50%;
+	padding-top: 1%
 }
 #moreFiltersButton {
-    color: #47a9da;
+	color: #47a9da;
+}
+.slider .ui-state-default .ui-slider .ui-slider-handle {
+	background: none;
 }
 
-.slider .ui-state-default .ui-slider .ui-slider-handle {
-  background: none;
-}
 /*changing color of rent price display*/
+
 #minRentPrice, #maxRentPrice, #minArea, #maxArea {
-    border: 0; 
-    color: #0879b2; 
-    font-weight: bold;
-    margin-top: 5%;
+	border: 0;
+	color: #0879b2;
+	font-weight: bold;
+	margin-top: 5%;
 }
 
 /*changing color of slider bar*/
+
 .ui-widget-header {
-    background: #0879b2;
+	background: #0879b2;
 }
+
 /*changing image for slider button*/
+
 .ui-slider .ui-slider-handle {
-  background:url(../img/sliderButton.jpg) no-repeat; position: absolute; 
-  background-size: 100%;
-  border-color: white;
-  color: grey;
-  width: 40px;
-  height: 35px;
-  margin-left: -5px;
-  top: -14px;
-  position: -200px;
+	background: url(../img/sliderButton.jpg) no-repeat;
+	position: absolute;
+	background-size: 100%;
+	border-color: white;
+	color: grey;
+	width: 40px;
+	height: 35px;
+	margin-left: -5px;
+	top: -14px;
+	position: -200px;
 }
-#moreAmenitiesButton, #lessAmenitiesButton{
-    color: #47a9da;
+#moreAmenitiesButton, #lessAmenitiesButton {
+	color: #47a9da;
 }
 .applyFiltersRow {
-    /*padding-left: 40%;*/
-    margin-left: -20%;
-    text-align: center;
+	/*padding-left: 40%;*/
+	margin-left: -20%;
+	padding-bottom: 1%;
+	text-align: center;
 }
 .cancelFiltersButton, .applyFiltersButton {
-    background: none;
-    border: none;
-    padding: 1%;
+	background: none;
+	border: none;
+	padding: 1%;
 }
 .applyFiltersButton {
-    background: black;
-    color: white;
-    margin-left: 5% ;
+	background: black;
+	color: white;
+	margin-left: 5%;
 }
 .cancelFiltersButton {
-    margin-right: 5%
+	margin-right: 5%
 }
+
 /*mobile*/
+
 @media (min-width: 320px) and (max-width: 425px) {
 	img {
-    padding-left: 5%;
+		padding-left: 5%;
+	}
+	.resetFiltersRow {
+		border-color: #d0d0d0;
+		border-style: solid;
+		border-width: 0 0 2px 0;
+		padding: 1% 5% 1% 5%;
+	}
+	.resetAllButton {
+		color: #47a9da;
+		margin-left: 50%;
+		padding-top: 3%;
+	}
+	.filtersSection {
+		bottom: 0;
+		background-color: white;
+		border-color: #d0d0d0;
+		border-style: solid;
+		border-width: 2px 0 0 0;
+		position: fixed;
+		width: 100%;
+	}
+	.landingPageFiltersRow, .moreFiltersSelectionRow, .applyFiltersRow {
+		padding: 0% 13% 0% 5%;
+	}
+	.landingPageFiltersRow {
+		padding-top: 5%;
+	}
+	.mobileFiltersButtonRow {
+		padding: 3%;
+		text-align: center;
+	}
+	.applyFiltersRow {
+		padding-bottom: 5%;
+	}
+	.cancelFiltersButton, .applyFiltersButton {
+		padding: 2%;
+	}
+	#mobileFiltersButton {
+		color: black;
+	}
+	.sliderRentAmountColumn, .moveInDateColumn, .SQFTColumn, .amenitiesColumn {
+		padding-top: 5%;
+	}
+	.applyFiltersRow {
+		/*padding-left: 40%;*/
+		margin-left: 13%;
+		text-align: center;
+	}
 }
 
-.resetFiltersRow{
-    border-color: #d0d0d0;
-    border-style: solid;
-    border-width: 0 0 2px 0;
-    padding: 1% 5% 1% 5%;
-}
-.resetAllButton{
-    color: #47a9da;
-    margin-left: 50%;
-    padding-top: 3%;
-}
-    .filtersSection {
-	bottom: 0;
-	background-color: white;
-    border-color: #d0d0d0;
-    border-style: solid;
-    border-width: 2px 0 0 0;
-    position: fixed;
-	width: 100%;
-}
-.landingPageFiltersRow,.moreFiltersSelectionRow, .applyFiltersRow {
-    padding: 0% 13% 0% 5%;
-}
-.landingPageFiltersRow {
-    padding-top: 5%;
-}
-.mobileFiltersButtonRow{
-    padding: 3%;
-    text-align: center;
-}
-.applyFiltersRow {
-    padding-bottom: 5%;
-}
-.cancelFiltersButton, .applyFiltersButton {
-    padding: 2%;
-}
-#mobileFiltersButton{
-    color: black;
-}
-.sliderRentAmountColumn, .moveInDateColumn, .SQFTColumn, .amenitiesColumn {
-    padding-top: 5%;
-}
-
-.applyFiltersRow {
-    /*padding-left: 40%;*/
-    margin-left: 13%;
-    text-align: center;
-}
-}
 /*tablet*/
+
 @media (min-width: 426px) and (max-width: 768px) {
 	img {
-    display: inline;
-    max-width: 50%;
-}
-    .filtersSection {
-        margin-left: 8%;
-    }
-}
-
-/*make filters menu full screen at tablet and mobile width*/
-@media (max-width: 768px){ 
-
+		display: inline;
+		max-width: 50%;
+	}
+	.filtersSection {
+		margin-left: 8%;
+	}
 }
 
-/*laptop large*/
+/*laptop*/
+
 @media (min-width: 769px) and (max-width: 1024px) {
 	img {
-    display: inline;
-    max-width: 30%;
-    margin-left: 3%;
-}
+		display: inline;
+		max-width: 30%;
+		margin-left: 3%;
+	}
 }
 
 /*laptop large*/
+
 @media (min-width: 1025px) and (max-width: 1440px) {
 	img {
-    display: inline;
-    /*max-width: 10%;*/
-    margin-left: 2.5%;
-}
+		display: inline;
+		/*max-width: 10%;*/
+		margin-left: 2.5%;
+	}
 }
 
 /*desktop*/
+
 @media (min-width: 1441px) {
 	img {
-    display: inline;
-    /*max-width: 10%;*/
-    margin-left: 4.5%;
-}
-}
-
-@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-	/*listingsResultsSection {
-    padding: 25%;
-}*/
-}
-@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-
-}
-@media (min-width: @screen-lg-min) {
-
+		display: inline;
+		/*max-width: 10%;*/
+		margin-left: 4.5%;
+	}
 }
